# the-mouth

./: README.md  pyproject.toml
src/mouth/: __init__.py  action_resolver.py  intent_parser.py  models.py  mouth.py  primitives_registry.py
src/mouth/prompts/: intent_system.txt  resolve_system.txt
src/mouth/providers/: __init__.py  base.py  claude.py
tests/: test_action_resolver.py  test_intent_parser.py  test_models.py  test_mouth_pipeline.py  test_primitives_registry.py
